--- a/css/index.css
+++ b/css/index.css
@@ -24,6 +24,16 @@ body::before {                                                 /* Создани
 }          
     /* Конец стилей для псевдоэлемента */
 
+    /* Работа с надписью ВЛАДИМИР КОЛОННЫ */
+
+#author {                                                      /* Стили для изображения с id author */
+    position: absolute;                                        /* Абсолютное позиционирование */
+    top: 5%;                                                   /* Отступ от верхнего края */
+    left: 2%;                                                  /* Отступ от левого края */
+    width: 80%;                                                /* Фиксированная ширина изображения */
+    height: auto;                                              /* Автоматическая высота для сохранения пропорций */
+}
+
     /*Работа с боковыми изображениями*/
 
 #man {                                                         /* Стили для изображения с id man */
@@ -46,3 +56,5 @@ body::before {                                                 /* Создани
     z-index: 1;                                                /* Размещение поверх других элементов */
 }                                                          
     /* Конец работы с боковыми изображениями */
+
+    
